@@ -2,6 +2,8 @@ Beaker Changelog
 ================
 
 1.3 (**tip**)
+* Added setuptools entry points to dynamically discover additional namespace
+  backends.
 * Fixed bug with invalidate and locks, fixes #594.
 * Added cache.region decorator to the CacheManager object.
 * Added cache regions. Can be provided in a configuration INI type, or
